<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Turquoise">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@drawable/rustleupmeasuring" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/flour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/flour" />

        <RadioButton
            android:id="@+id/butter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/butter" />

        <RadioButton
            android:id="@+id/heavycream"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/heavycream" />

        <RadioButton
            android:id="@+id/powderedsugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/powderedsugar" />

        <RadioButton
            android:id="@+id/granulatedsugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/granulatedsugar" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/fromValue"
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="123"
            android:inputType="textPersonName" />

        <Spinner
            android:id="@+id/fromSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/fromUnits" />

    </LinearLayout>


    <Button
        android:id="@+id/button_convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:onClick="convert"
        android:text="Convert"
        android:theme="@style/MyButton"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="Result:" />

    <TextView
        android:id="@+id/resultvalue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Salmon" />

</LinearLayout>
